# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: tuntikirjanpito.md
laskarit/viikko2/: määrittelydokumentti.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: pyproject.toml
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: Monopoli.drawio.html  hsl.md
peli-app/: .pylintrc  pyproject.toml  tasks.py
peli-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  tuntikirjanpito.md  vaatimusmäärittely.md
peli-app/src/: app.py  board.py  game.py  menu.py  renderer.py
peli-app/src/scenes/: board.py  menu.py  score.py
peli-app/src/sprites/: button.py  elements.py  tile.py
peli-app/src/tests/: board_test.py  peli_test.py  scenes_test.py  tile_test.py
poetry-testi/: pyproject.toml
