[tool.poetry]
name = "peli-app"
version = "0.1.0"
description = ""
authors = ["Rano-9 <esamatti.karvonen@pispalanit.fi>"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
invoke = "^2.2.1"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
