[tool.poetry]
name = "unicafe"
version = "0.1.0"
description = ""
authors = ["Kai Korpimies <kai.korpimies@helsinki.fi>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
coverage = "^7.13.5"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
